# FinPilot

./: README.md  agent.py  prompts.py  pyproject.toml  server.py
tools/: sector_tools.py  stock_tools.py
