[project]
name = "finbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.1"
dependencies = [
    "dotenv>=0.9.9",
    "llama-index>=0.12.31",
    "llama-index-tools-mcp>=0.1.1",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "yfinance>=0.2.55",
]
